--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,24 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   
     font-family: 'Rajdhani', sans-serif;
 }
 
-.svg1{
-    position: absolute;
-}
+
+
+
 
 .grid-container h1 {
     font-size: 5rem;
     text-align: center;
     font-family: 'Bangers', cursive;
     color: rgb(255, 255, 255);
-
     text-shadow: 1px 10px 1px rgb(0, 0, 0);
 }
 
 .grid-container {
+    width: 100%;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 1.3fr 0.7fr;
     grid-template-rows: 1fr;
@@ -31,119 +29,171 @@
   }
 .a1 { 
     grid-area: a1;
-    width: 100%;
-    height: 100vh;
     background-image: radial-gradient(farthest-corner at 2000px 450px , #000046 0%, #1CB5E0 100%);
     border-right: 10px solid rgb(255, 255, 255);
 }
 .a2 { 
     grid-area: a2;
     background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 100vh;
     border-left: 10px solid rgb(18 119 172);
+    position: relative;
+}
+
+.svg1{
+    position: absolute;
+    top: 0px; 
+    left: 0%;
+}
+
+.img1{
+    position: absolute;
+    top: 30%; 
+    left: 10%;
+
+    height: 312px;
+    width: 312px;
 }
 
 
-main {
-    position: relative;
-    width: 100vw;
-    height: 180vh;
+
+
+
+.grid-personagens {
+    min-height: 70%;
+
+    background-color: rgba(51, 51, 51, 0);
+    padding: 0px;
+    margin: 0px;
+    margin-top: 0px;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+      "desc"
+      "personagem";
+}
+
+.desc { grid-area: desc;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-bottom: 0px solid rgb(255, 255, 255);
+    background-color: rgba(255, 0, 0, 0);
+}
+
+
+
+.desc h2 {
+    margin-top: 20px;
+    color: rgb(255, 255, 255);
+    border-left: 5px solid rgb(43, 255, 0);
+    padding-left: 15px;
+}
+.desc p {
+    padding: 15px;
+    text-align: justify;
+    color: rgb(255, 255, 255);
+}
+
+.personagem { grid-area: personagem;
+
+    margin: 30px 100px;
+    border-bottom: 5px solid rgb(255, 255, 255);
+    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
+
+    border-radius: 100px 10px ;
+
+
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*          SOBRE */
+.main {
     border-bottom: 3px solid rgb(18 119 172);
+    background-color: rgb(226, 7, 226);
 }
 
 .principal {
-
+    overflow: hidden;
     width: 80%;
-    padding-right: 0px;
-    padding-left: 0px;
+
     margin-right: auto;
     margin-left: auto;
 
     border-radius: 50px 50px 50px 50px;
 
-    position: absolute;
-    
     border: 10px solid rgb(18 119 172);
 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
 
     background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
-    min-height: 180vh;
 
-
-    top: -90px; 
-    left: 10%;
-}
-
-
-
-.principal h1{
-    font-size: 3rem;
-    text-align: center;
-    font-family: 'Bangers', cursive;
-    color: rgb(255, 255, 255);
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
-
-    padding: 11px;
-    
-    letter-spacing: 20px;
-
-    border-radius: 35px 35px 0px 0px;
-
-    text-shadow: 1px 10px 1px rgb(0, 0, 0);
-}
-
-.info {
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
-    height: 40vh;
-    border-top: 1px solid rgb(255, 255, 255); 
-
+    top: 0%; 
+    left: 0%;
+    right: 0%;
 }
 
 
 .grid-sobre {
     padding: 15px;
     width: 100%;
-    height: 100vh;
+
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 30px 30px;
+    gap: 0px 0px;
     grid-template-areas:
       "b1 b2"
-      "b3 b4"
+      "b4 b3"
       "b5 b5";
   }
 
 .b1 { grid-area: b1;
+    max-height: 300px;
     background: rgba(51, 51, 51, 0);
-    margin-left: 100px;
+    margin-left: 0px;
     border-bottom: 1px solid rgb(255, 255, 255);
 }
 .b2 { 
+    max-height: 300px;
     grid-area: b2;
     background: rgba(255, 0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid rgb(255, 255, 255);
-    margin-right: 100px;
+    margin-right: 0px;
 }
-.b3 { 
+.b4 { 
+    max-height: 300px;
     grid-area: b3;
     background: rgba(255, 0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid rgb(255, 255, 255);
-    margin-left: 100px;
+    margin-left: 0px;
 }
 
-.b4 { 
+.b3{ 
+    max-height: 300px;
     grid-area: b4;
     background: rgba(51, 51, 51, 0);
-    margin-right: 100px;
+    margin-right: 0px;
     border-bottom: 1px solid rgb(255, 255, 255);
 }
 
@@ -157,7 +207,16 @@ main {
 
 
 
-
+.principal h1{
+    font-size: 3rem;
+    text-align: center;
+    font-family: 'Bangers', cursive;
+    color: rgb(255, 255, 255);
+    padding: 11px;
+    letter-spacing: 20px;
+    border-radius: 35px 35px 0px 0px;
+    text-shadow: 1px 10px 1px rgb(0, 0, 0);
+}
 
 
 .b5 h2 {
@@ -186,14 +245,14 @@ main {
     color: rgb(255, 255, 255);
 }
 
-.b4 h2 {
+.b3 h2 {
 margin-top: 20px;
 color: rgb(255, 255, 255);
 border-left: 5px solid rgb(43, 255, 0);
 padding-left: 15px;
 }
 
-.b4 p {
+.b3 p {
     padding: 15px;
     text-align: justify;
     color: rgb(255, 255, 255);
@@ -201,4 +260,28 @@ padding-left: 15px;
 
 .img{
 margin: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* footer */
+.info {
+    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
+    height: 40vh;
+    border-top: 1px solid rgb(255, 255, 255); 
 }
