--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Rajdhani', sans-serif;
+
 }
 
 
@@ -10,6 +11,8 @@
 
 
 .grid-container h1 {
+
+
     font-size: 5rem;
     text-align: center;
     font-family: 'Bangers', cursive;
@@ -20,15 +23,12 @@
 
     position: absolute;
 
-
-
-
     margin-right: auto;
     margin-left: auto;
 
-    border-radius: 10px 50px 50px 50px;
+    border-radius: 10px 10px 50px 50px;
 
-    border: 5px solid #FFF;
+    border: 5px solid #ffcf47;
 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
 
@@ -50,6 +50,16 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
 .grid-container {
     position: relative;
     border-bottom: 10px solid #fff;
@@ -62,16 +72,36 @@
     grid-template-areas:
       "a1 a2";
   }
+
+
+
+
 .a1 { 
+    width: 100%;
+    height: 100%;
+
     grid-area: a1;
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #000046 0%, #1CB5E0 100%);
-    border-right: 10px solid rgb(255, 255, 255);
+    background-image: radial-gradient(farthest-corner at 100px 40px , #f7d78c 0%, #8a704b 100%);
+
+    background-image: url(/img/fundo.png);
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    border-right: 10px solid #ffcf47;
 }
 .a2 { 
+    overflow: hidden;
+
     grid-area: a2;
-    background-color: rgb(255, 255, 255);
-    border-left: 10px solid rgb(18 119 172);
+    background-color: #ffcf47;
+    border-left: 10px solid #8a704b;
     position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .svg1{
@@ -81,12 +111,13 @@
 }
 
 .img1{
-    position: absolute;
-    top: 30%; 
-    left: 10%;
+    padding-top: 100px;
+    overflow: hidden;
+    width: 380px;
 
-    height: 312px;
-    width: 312px;
+    max-width: 100%;
+    height: auto;
+    z-index: 2;
 }
 
 
@@ -98,52 +129,36 @@
 .grid-personagens {
     min-height: 70%;
 
-    background-color: rgba(51, 51, 51, 0);
-    padding: 0px;
-    margin: 0px;
-    margin-top: 0px;
-
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 0px 0px;
-    grid-template-areas:
-      "desc"
-      "personagem";
 }
 
-.desc { grid-area: desc;
-    margin-left: 100px;
-    margin-right: 100px;
+.desc { 
     border-bottom: 0px solid rgb(255, 255, 255);
     background-color: rgba(255, 0, 0, 0);
 }
+.personagem { 
 
+    border: 5px solid #664e2c00;
+    background-color: #dec17900;
+    border-radius: 50px 0px 50px 0px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0);
+
+ }
 
 
 .desc h2 {
     margin-top: 20px;
     color: rgb(255, 255, 255);
-    border-left: 5px solid rgb(43, 255, 0);
+    border-left: 10px solid#ffcf47;
     padding-left: 15px;
 }
 .desc p {
     padding: 15px;
     text-align: justify;
     color: rgb(255, 255, 255);
+
 }
 
-.personagem { grid-area: personagem;
 
-    margin: 0px 100px 30px 100px;
-    border: 5px solid rgb(255, 255, 255);
-    background-color: rgba(51, 51, 51, 0);
-
-    border-radius: 50px 0px 50px 0px;
-
-
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
- }
 
  .img2{
     height: 50px;
@@ -165,16 +180,27 @@
 
 
     height: 50%;
-    margin: 25px;
+
+}
+
+.quadrado:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
+    background: #ffcf47;
 }
 
 .quadrado{
     background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
 
+    background: #9a7f54;
     margin: 10px;
-    border: 1px solid #fff;
-    border-left: 5px solid rgb(43, 255, 0);
+    border: 3px solid #b49463;
+
+    border-left: 5px solid #5f4b30;
+
     border-radius: 50px 0px 50px 0px;
+
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
+    transition: .1s;
 }
 
 .p1 { grid-area: p1; }
@@ -185,6 +211,14 @@
 .p6 { grid-area: p6; }
 .p7 { grid-area: p7; }
 .p8 { grid-area: p8; }
+
+
+
+
+
+
+
+
 
 
 
@@ -273,6 +307,17 @@
     border-bottom: 1px solid rgb(255, 255, 255);
 }
 
+
+
+
+.grid-video{
+text-align: center;
+
+}
+
+.video{
+    max-width: 100%; 
+}
 .teaser {
     text-align: center;
     margin-top: 20px !important;
