--- a/styles.css
+++ b/styles.css
@@ -2,49 +2,9 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Baloo 2', cursive;
 
 }
-
-
-
-
-
-
-
-.sobre-flutuante{
-
-    position: absolute;
-
-    margin-right: auto;
-    margin-left: auto;
-
-    border-radius: 10px 10px 50px 50px;
-
-    border: 5px solid #ffcf47;
-
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
-
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
-
-    top: 99%; 
-    left: 0%;
-    right: 0%;
-}
-
-.sobre-flutuante h1{
-    font-size: 3rem;
-    letter-spacing: 20px; 
-
-}
-
-
-
-
-
-
-
-
 
 
 
@@ -98,7 +58,6 @@
 
 }
 .desc h2 {
-    font-family: 'Baloo 2', cursive;
     color: rgb(255, 255, 255);
     border-left: 10px solid#ffcf47;
     padding-left: 15px;
@@ -106,7 +65,6 @@
     text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
 }
 .desc p {
-    font-family: 'Baloo 2', cursive;
     text-align: justify;
     color: rgb(255, 255, 255);
     margin-bottom: 0rem;
@@ -190,7 +148,6 @@
 
 .nome-personagem{
     z-index: 3;
-    font-family: 'Baloo 2', cursive;
     color: rgb(255, 255, 255);
     border: 5px solid#ffffff;
     padding-left: 15px;
@@ -235,14 +192,6 @@
 
 
 
-
-
-
-
-
-
-
-
 .p1 { grid-area: p1; }
 .p2 { grid-area: p2; }
 .p3 { grid-area: p3; }
@@ -251,6 +200,126 @@
 .p6 { grid-area: p6; }
 .p7 { grid-area: p7; }
 .p8 { grid-area: p8; }
+
+
+
+/*Movel*/
+@media only screen and (max-width: 480px){
+    .grid-container {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .a1 {
+        height: 100%;
+        background-image: url(/img/fundo.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        border-right: 0px solid #ffcf47;
+        border-bottom: 5px solid #ffcf47;
+    }
+    .a1 h1 {
+        letter-spacing: 5px;
+        font-size: 2rem;
+
+        text-shadow: 3px 3px 0px rgb(51, 51, 51);
+        margin-top: 10px;
+    }
+
+    .grid-a1 {
+        height: 80%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 0% 5%;
+    }
+    .desc h2 {
+        margin-top: 10px;
+        font-size: 1.5rem;
+    }
+
+    .desc p {
+        font-size: 4vw;
+    }
+
+
+    .bichos-grid {
+        align-items: end;
+        gap: 0px 15px;
+
+    }
+
+    .quadrado {
+        height: auto;
+    }
+
+
+
+    .a2 {
+        height: 80%;
+        overflow: hidden;
+
+        background-color: #ffcf47;
+        border-left: 0px solid #8a704b;
+        border-top: 5px solid #8a704b;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .nome-personagem {
+        border: 2.5px solid#ffffff;
+        font-size: 1.5rem;
+        text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        padding: 10px 30px;
+        text-transform: uppercase;
+    }
+
+    .img1 {
+        padding-top: 0px;
+        overflow: hidden;
+        width: 200px;
+        max-width: 50%;
+        height: auto;
+        z-index: 2;
+    }
+
+    .svg1 {
+        position: absolute;
+        top: -100px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -302,7 +371,6 @@
 .principal h1{
     font-size: 3rem;
     text-align: center;
-    font-family: 'Bangers', cursive;
     color: rgb(255, 255, 255);
     padding: 11px;
     letter-spacing: 20px;
