--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,19 @@
   }
 }
 
+@media only screen and (max-height: 800px) {
+  .grid-container {
+    height: 110vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 /*          SOBRE */
 .main {
   margin-top: 80px;
