--- a/styles.scss
+++ b/styles.scss
@@ -22,13 +22,14 @@
 
 .a1 { 
     grid-area: a1;
-    background-image: url(./img/fundo.png);
+    background-image: url(./img/fundoC.png);
 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 
     border-right: 5px solid #ffcf47;
+    border-bottom: 5px solid #ffcf47;
 }
 .a1 h1 {
     letter-spacing: 5px;
@@ -132,6 +133,7 @@
     grid-area: a2;
     background-color: #ffcf47;
     border-left: 5px solid #8a704b;
+    border-bottom: 5px solid #ffcf47;
     position: relative;
 
     display: flex;
@@ -214,7 +216,7 @@
 
     .a1 {
         height: 100%;
-        background-image: url(./img/fundo.png);
+        background-image: url(./img/fundoC.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -297,16 +299,20 @@
         position: absolute;
         top: -50px;
     }
-}
 
 
-@media only screen and (max-height: 800px){
-    .grid-container {
-        height: 110vh;
-        display: flex;
-        flex-direction: column;
+    @media only screen and (max-height: 800px){
+        .grid-container {
+            height: 110vh;
+            display: flex;
+            flex-direction: column;
+        }
     }
+
 }
+
+
+
 
 
 
@@ -351,29 +357,28 @@
 
 /*          SOBRE */
 .main {
-    margin-top: 80px;
-    margin-bottom: 50px;
-    background-color: rgb(255, 255, 255);
+    margin-top: 1px;
+    background-color: #ffcf47;
     padding-top: 10px;
 }
 
 .principal {
-    width: 80%;
+    width: 90%;
 
     margin-right: auto;
     margin-left: auto;
 
-    border-radius: 50px 50px 50px 50px;
+    border-radius: 25px;
 
-    border: 10px solid #FFF;
+    border: 5px solid #b49463;
 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
+    box-shadow: 0px 0px 10px #333;
 
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
 
-    top: 0%; 
-    left: 0%;
-    right: 0%;
+    background-image: url(./img/fundoC.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 
@@ -400,7 +405,7 @@
 }
 
 .b1 { 
-    padding-left: 50px;
+    padding-left: 0px;
     width: 50%;
     border-bottom: 1px solid rgb(255, 255, 255);
 }
@@ -412,7 +417,7 @@
     border-bottom: 1px solid rgb(255, 255, 255);
 }
 .b3{ 
-    padding-left: 50px;
+    padding-left: 0px;
     width: 50%;
     border-bottom: 1px solid rgb(255, 255, 255);
 }
@@ -440,8 +445,8 @@ text-align: center;
     margin-top: 20px !important;
     margin-bottom: 35px !important;
     color: rgb(255, 255, 255);
-    border-left: 5px solid rgb(43, 255, 0);
-    border-right: 5px solid rgb(43, 255, 0);
+    border-left: 5px solid #ffcf47;
+    border-right: 5px solid #ffcf47;
 }
 
 
@@ -450,7 +455,7 @@ text-align: center;
 .tx h2 {
     margin-top: 20px;
     color: rgb(255, 255, 255);
-    border-left: 5px solid rgb(43, 255, 0);
+    border-left: 5px solid #ffcf47;
     padding-left: 15px;
 }
 .tx p {
