--- a/styles.scss
+++ b/styles.scss
@@ -293,6 +293,7 @@
         max-width: 55vw;
         height: auto;
         z-index: 2;
+        display: none;
     }
 
     .svg1 {
@@ -356,6 +357,18 @@
 
 
 /*          SOBRE */
+
+
+video {
+    max-width: 70%;
+    height: auto;
+    border: 3px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: 1px 1px 10px #333;
+}
+
+
 .main {
     margin-top: 1px;
     background-color: #ffcf47;
