--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,7 @@
     border-radius: 10px;
     padding: 10px 30px;
     text-transform: uppercase;
+    display: none;
   }
   .img1 {
     padding-bottom: 10px;
@@ -391,6 +392,24 @@
   .svg1 {
     position: absolute;
     top: -50px;
+  }
+  .i-grid {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    z-index: 3;
   }
 }
 
