--- a/styles.scss
+++ b/styles.scss
@@ -283,6 +283,7 @@
         border-radius: 10px;
         padding: 10px 30px;
         text-transform: uppercase;
+        display: none;
     }
 
     .img1 {
@@ -301,6 +302,16 @@
         top: -50px;
     }
 
+
+    .i-grid{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        z-index: 3;
+    }
 
     @media only screen and (max-height: 800px){
         .grid-container {
