--- a/styles.css
+++ b/styles.css
@@ -306,7 +306,7 @@
     width: 70%;
   }
   .a1 {
-    height: auto;
+    height: 200px;
     background-image: url(./img/fundoC.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -395,7 +395,8 @@
   }
   .i-grid {
     width: 100%;
-    height: 100%;
+    height: 50vh;
+    background-color: green;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
