--- a/styles.scss
+++ b/styles.scss
@@ -215,7 +215,7 @@
     }
 
     .a1 {
-        height: auto;
+        height: 200px;
         background-image: url(./img/fundoC.png);
         background-repeat: no-repeat;
         background-position: center;
@@ -305,7 +305,8 @@
 
     .i-grid{
         width: 100%;
-        height: 100%;
+        height: 50vh;
+        background-color: green;
         display: flex;
         justify-content: center;
         flex-direction: column;
