--- a/styles.scss
+++ b/styles.scss
@@ -215,7 +215,7 @@
     }
 
     .a1 {
-        height: 200px;
+        height: 100%;
         background-image: url(./img/fundoC.png);
         background-repeat: no-repeat;
         background-position: center;
