--- a/styles.css
+++ b/styles.css
@@ -306,7 +306,7 @@
     width: 70%;
   }
   .a1 {
-    height: 200px;
+    height: 100%;
     background-image: url(./img/fundoC.png);
     background-repeat: no-repeat;
     background-position: center;
