--- a/styles.scss
+++ b/styles.scss
@@ -215,7 +215,7 @@
     }
 
     .a1 {
-        height: 100%;
+        height: 50%;
         background-image: url(./img/fundoC.png);
         background-repeat: no-repeat;
         background-position: center;
@@ -261,7 +261,7 @@
 
 
     .a2 {
-        height: 70%;
+        height: 50%;
         overflow: hidden;
 
         background-color: #ffcf47;
@@ -306,7 +306,7 @@
     .i-grid{
         width: 100%;
         height: 50vh;
-        background-color: green;
+        background-color: rgb(12, 15, 207);
         display: flex;
         justify-content: center;
         flex-direction: column;
