--- a/styles.css
+++ b/styles.css
@@ -427,7 +427,7 @@
 
 /*          SOBRE */
 video {
-  max-width: 70%;
+  max-width: 100%;
   height: auto;
   border: 3px solid white;
   border-radius: 10px;
@@ -443,7 +443,7 @@ video {
 }
 
 .principal {
-  width: 90%;
+  width: 95%;
   margin-right: auto;
   margin-left: auto;
   border-radius: 25px;
@@ -474,7 +474,7 @@ video {
 
 .grid-sobre {
   margin: 0px;
-  padding: 0px 30px 30px 30px;
+  padding: 0px 15px 0px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -535,7 +535,6 @@ video {
 .teaser {
   text-align: center;
   margin-top: 20px !important;
-  margin-bottom: 35px !important;
   color: white;
   border-left: 5px solid #ffcf47;
   border-right: 5px solid #ffcf47;
@@ -547,12 +546,16 @@ video {
   color: white;
   border-left: 5px solid #ffcf47;
   padding-left: 15px;
+  font-size: 1.5rem;
+  text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
 }
 
 .tx p {
   padding: 15px;
   text-align: justify;
   color: white;
+  font-size: 4vw;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
 }
 
 @media only screen and (max-width: 800px) {
