--- a/styles.scss
+++ b/styles.scss
@@ -356,20 +356,11 @@
 
 
 
-
-
-
-
-
-
-
-
-
 /*          SOBRE */
 
 
 video {
-    max-width: 70%;
+    max-width: 100%;
     height: auto;
     border: 3px solid rgb(255, 255, 255);
     border-radius: 10px;
@@ -385,7 +376,7 @@ video {
 }
 
 .principal {
-    width: 90%;
+    width: 95%;
 
     margin-right: auto;
     margin-left: auto;
@@ -421,7 +412,7 @@ video {
 }
 .grid-sobre {
     margin: 0px;
-    padding: 0px 30px 30px 30px;
+    padding: 0px 15px 0px 15px;
     display: flex;
     flex-direction: column;
 }
@@ -465,7 +456,6 @@ text-align: center;
 .teaser {
     text-align: center;
     margin-top: 20px !important;
-    margin-bottom: 35px !important;
     color: rgb(255, 255, 255);
     border-left: 5px solid #ffcf47;
     border-right: 5px solid #ffcf47;
@@ -479,11 +469,15 @@ text-align: center;
     color: rgb(255, 255, 255);
     border-left: 5px solid #ffcf47;
     padding-left: 15px;
+    font-size: 1.5rem;
+    text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
 }
 .tx p {
     padding: 15px;
     text-align: justify;
     color: rgb(255, 255, 255);
+    font-size: 4vw;
+    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
 }
 
 
