--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
   font-family: 'Baloo 2', cursive;
 }
 
+p {
+  margin-bottom: 0 !important;
+}
+
 .grid-container {
   position: relative;
   min-height: 100vh;
@@ -174,6 +178,25 @@
           flex-direction: column;
 }
 
+.i-grid {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 3;
+}
+
 .nome-personagem {
   z-index: 3;
   color: white;
@@ -290,7 +313,141 @@
   grid-area: p8;
 }
 
-/*Movel*/
+.main {
+  margin-top: 1px;
+  background-color: #ffcf47;
+  padding-top: 10px;
+}
+
+.principal {
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 25px;
+  border: 5px solid #b49463;
+  -webkit-box-shadow: 0px 0px 10px #333;
+          box-shadow: 0px 0px 10px #333;
+  background-image: url(./img/fundoC.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.grid-sobre {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.grid-teste {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.b1 {
+  width: 50%;
+  border-bottom: 1px solid white;
+}
+
+.tx h2 {
+  color: white;
+  border-left: 5px solid #ffcf47;
+  padding-left: 15px;
+  font-size: 2rem;
+  text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
+}
+
+.tx p {
+  text-align: justify;
+  color: white;
+  font-size: 1.5vmax;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
+}
+
+.b2 {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid white;
+}
+
+video {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #ffcf47;
+  border-radius: 10px;
+  -webkit-box-shadow: 1px 1px 10px #333;
+          box-shadow: 1px 1px 10px #333;
+}
+
+.grid-teste2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.b3 {
+  width: 50%;
+  border-bottom: 1px solid white;
+}
+
+.b4 {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid white;
+}
+
+@media only screen and (max-width: 800px) {
+  .img {
+    display: none;
+  }
+  .b1 {
+    width: 100%;
+  }
+  .b2 {
+    width: 0%;
+  }
+  .b3 {
+    width: 100%;
+  }
+  .b4 {
+    width: 0%;
+  }
+}
+
+/* footer */
+.info {
+  background-image: radial-gradient(farthest-corner at 2000px 450px, #2535c0 0%, #333 100%);
+  height: 40vh;
+  border-top: 10px solid white;
+  border-radius: 50px 50px 0px 0px;
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
+
 @media only screen and (max-width: 480px) {
   .grid-container {
     height: 100vh;
@@ -410,6 +567,21 @@
             align-items: center;
     z-index: 3;
   }
+  .tx p {
+    padding: 0px;
+    font-size: 4vw;
+  }
+  .teaser {
+    margin-bottom: 10px;
+    color: white;
+    border-left: 5px solid #ffcf47;
+    padding-left: 15px;
+    font-size: 1.5rem;
+    text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
+  }
+  .tx h2 {
+    font-size: 1.5rem;
+  }
 }
 
 @media only screen and (max-width: 480px) and (max-height: 800px) {
@@ -423,166 +595,5 @@
         -ms-flex-direction: column;
             flex-direction: column;
   }
-}
-
-/*          SOBRE */
-video {
-  max-width: 100%;
-  height: auto;
-  border: 3px solid white;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  -webkit-box-shadow: 1px 1px 10px #333;
-          box-shadow: 1px 1px 10px #333;
-}
-
-.main {
-  margin-top: 1px;
-  background-color: #ffcf47;
-  padding-top: 10px;
-}
-
-.principal {
-  width: 95%;
-  margin-right: auto;
-  margin-left: auto;
-  border-radius: 25px;
-  border: 5px solid #b49463;
-  -webkit-box-shadow: 0px 0px 10px #333;
-          box-shadow: 0px 0px 10px #333;
-  background-image: url(./img/fundoC.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.principal h1 {
-  font-size: 3rem;
-  text-align: center;
-  color: white;
-  padding: 11px;
-  letter-spacing: 20px;
-  border-radius: 35px 35px 0px 0px;
-  text-shadow: 1px 10px 1px black;
-}
-
-.grid-teste {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 20px;
-}
-
-.grid-sobre {
-  margin: 0px;
-  padding: 0px 15px 0px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.b1 {
-  padding-left: 0px;
-  width: 50%;
-  border-bottom: 1px solid white;
-}
-
-.b2 {
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid white;
-}
-
-.b3 {
-  padding-left: 0px;
-  width: 50%;
-  border-bottom: 1px solid white;
-}
-
-.b4 {
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid white;
-}
-
-.grid-video {
-  text-align: center;
-}
-
-.video {
-  max-width: 100%;
-}
-
-.teaser {
-  text-align: center;
-  margin-top: 20px !important;
-  color: white;
-  border-left: 5px solid #ffcf47;
-  border-right: 5px solid #ffcf47;
-}
-
-/*P E H2 do sobre*/
-.tx h2 {
-  margin-top: 20px;
-  color: white;
-  border-left: 5px solid #ffcf47;
-  padding-left: 15px;
-  font-size: 1.5rem;
-  text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
-}
-
-.tx p {
-  padding: 15px;
-  text-align: justify;
-  color: white;
-  font-size: 4vw;
-  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
-}
-
-@media only screen and (max-width: 800px) {
-  .img {
-    display: none;
-  }
-  .b1 {
-    width: 100%;
-  }
-  .b2 {
-    width: 0%;
-  }
-  .b3 {
-    width: 100%;
-  }
-  .b4 {
-    width: 0%;
-  }
-}
-
-/* footer */
-.info {
-  background-image: radial-gradient(farthest-corner at 2000px 450px, #2535c0 0%, #333 100%);
-  height: 40vh;
-  border-top: 10px solid white;
-  border-radius: 50px 50px 0px 0px;
-  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
 /*# sourceMappingURL=styles.css.map */
