--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,9 @@
     font-family: 'Baloo 2', cursive;
 }
 
-
+p{
+    margin-bottom: 0 !important;
+}
 
 
 .grid-container {
@@ -142,6 +144,19 @@
     flex-direction: column;
 }
 
+.i-grid {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+
+    justify-content: center;
+
+    flex-direction: column-reverse;
+    align-items: center;
+    z-index: 3;
+}
+
 .nome-personagem{
     z-index: 3;
     color: rgb(255, 255, 255);
@@ -199,9 +214,165 @@
 
 
 
-/*Movel*/
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////*MAIN*/
+.main {
+    margin-top: 1px;
+    background-color: #ffcf47;
+    padding-top: 10px;
+}
+.principal {
+    width: 95%;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 25px;
+    border: 5px solid #b49463;
+    box-shadow: 0px 0px 10px #333;
+    background-image: url(./img/fundoC.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.grid-sobre {
+    display: flex;
+    flex-direction: column;
+}
+.grid-teste{
+    display: flex;
+    flex-direction: row-reverse;
+}
+.b1 { 
+    width: 50%;
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+.tx h2 {
+    color: rgb(255, 255, 255);
+    border-left: 5px solid #ffcf47;
+    padding-left: 15px;
+    font-size: 2rem;
+    text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
+}
+.tx p {
+    text-align: justify;
+    color: rgb(255, 255, 255);
+    font-size: 1.5vmax;
+    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
+}
+
+.b2 { 
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+video {
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #ffcf47;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #333;
+}
+
+.grid-teste2{
+    display: flex;
+}
+.b3{ 
+    width: 50%;
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+.b4 { 
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.grid-video{
+}
+
+
+@media only screen and (max-width: 800px) {
+    .img{
+        display: none;
+    }
+    .b1{
+        width: 100%;
+    }
+    .b2 {
+        width: 0%;
+    }
+    .b3{
+        width: 100%;
+    }
+    .b4 {
+        width: 0%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* footer */
+.info {
+    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
+    height: 40vh;
+    border-top: 10px solid rgb(255, 255, 255); 
+    border-radius: 50px 50px 0px 0px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
+}
+
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////*Movel*/
 
 @media only screen and (max-width: 480px){
     .grid-container {
@@ -311,6 +482,28 @@
         z-index: 3;
     }
 
+
+    .tx p{
+        padding: 0px;
+        font-size: 4vw;
+    }
+
+    .teaser {
+
+        margin-bottom: 10px;
+        color: white;
+        border-left: 5px solid #ffcf47;
+        padding-left: 15px;
+        font-size: 1.5rem;
+        text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
+    }
+
+
+    .tx h2 {
+        font-size: 1.5rem;
+    }
+
+
     @media only screen and (max-height: 800px){
         .grid-container {
             height: 110vh;
@@ -319,200 +512,4 @@
         }
     }
 
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*          SOBRE */
-
-
-video {
-    max-width: 100%;
-    height: auto;
-    border: 3px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    margin-bottom: 20px;
-    box-shadow: 1px 1px 10px #333;
-}
-
-
-.main {
-    margin-top: 1px;
-    background-color: #ffcf47;
-    padding-top: 10px;
-}
-
-.principal {
-    width: 95%;
-
-    margin-right: auto;
-    margin-left: auto;
-
-    border-radius: 25px;
-
-    border: 5px solid #b49463;
-
-    box-shadow: 0px 0px 10px #333;
-
-
-    background-image: url(./img/fundoC.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-
-
-.principal h1{
-    font-size: 3rem;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    padding: 11px;
-    letter-spacing: 20px;
-    border-radius: 35px 35px 0px 0px;
-    text-shadow: 1px 10px 1px rgb(0, 0, 0);
-}
-
-
-.grid-teste{
-    display: flex;
-    padding-top: 20px;
-}
-.grid-sobre {
-    margin: 0px;
-    padding: 0px 15px 0px 15px;
-    display: flex;
-    flex-direction: column;
-}
-
-.b1 { 
-    padding-left: 0px;
-    width: 50%;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-.b2 { 
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-.b3{ 
-    padding-left: 0px;
-    width: 50%;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-.b4 { 
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-
-
-
-
-.grid-video{
-text-align: center;
-
-}
-
-.video{
-    max-width: 100%; 
-}
-.teaser {
-    text-align: center;
-    margin-top: 20px !important;
-    color: rgb(255, 255, 255);
-    border-left: 5px solid #ffcf47;
-    border-right: 5px solid #ffcf47;
-}
-
-
-
-/*P E H2 do sobre*/
-.tx h2 {
-    margin-top: 20px;
-    color: rgb(255, 255, 255);
-    border-left: 5px solid #ffcf47;
-    padding-left: 15px;
-    font-size: 1.5rem;
-    text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
-}
-.tx p {
-    padding: 15px;
-    text-align: justify;
-    color: rgb(255, 255, 255);
-    font-size: 4vw;
-    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
-}
-
-
-@media only screen and (max-width: 800px) {
-    .img{
-        display: none;
-    }
-    .b1{
-        width: 100%;
-    }
-    .b2 {
-        width: 0%;
-    }
-    .b3{
-        width: 100%;
-    }
-    .b4 {
-        width: 0%;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-/* footer */
-.info {
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
-    height: 40vh;
-    border-top: 10px solid rgb(255, 255, 255); 
-    border-radius: 50px 50px 0px 0px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
 }
