--- a/css/home.css
+++ b/css/home.css
@@ -24,7 +24,7 @@ p{
 
 .a1 { 
     grid-area: a1;
-    background-image: url(./img/fundoC.png);
+    background-image: url(../img/fundoC.png);
 
     background-repeat: no-repeat;
     background-position: center;
@@ -248,100 +248,8 @@ p{
 
 
 
-//////////////////////////////////////////////////////////////////////////////////////////////////////*MAIN*/
-.main {
-    margin-top: 1px;
-    background-color: #ffcf47;
-    padding-top: 10px;
-}
-.principal {
-    width: 95%;
-    margin-right: auto;
-    margin-left: auto;
-    border-radius: 25px;
-    border: 5px solid #b49463;
-    box-shadow: 0px 0px 10px #333;
-    background-image: url(./img/fundoC.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.grid-sobre {
-    display: flex;
-    flex-direction: column;
-}
-.grid-teste{
-    display: flex;
-    flex-direction: row-reverse;
-}
-.b1 { 
-    width: 50%;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-.tx h2 {
-    color: rgb(255, 255, 255);
-    border-left: 5px solid #ffcf47;
-    padding-left: 15px;
-    font-size: 2rem;
-    text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
-}
-.tx p {
-    text-align: justify;
-    color: rgb(255, 255, 255);
-    font-size: 1.5vmax;
-    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
-}
-
-.b2 { 
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-video {
-    max-width: 100%;
-    height: auto;
-    border: 1px solid #ffcf47;
-    border-radius: 10px;
-    box-shadow: 1px 1px 10px #333;
-}
-
-.grid-teste2{
-    display: flex;
-}
-.b3{ 
-    width: 50%;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-.b4 { 
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-
-.grid-video{
-}
 
 
-@media only screen and (max-width: 800px) {
-    .img{
-        display: none;
-    }
-    .b1{
-        width: 100%;
-    }
-    .b2 {
-        width: 0%;
-    }
-    .b3{
-        width: 100%;
-    }
-    .b4 {
-        width: 0%;
-    }
-}
 
 
 
@@ -372,7 +280,7 @@ video {
 }
 
 
-///////////////////////////////////////////////////////////////////////////////////////////////////////*Movel*/
+/*////////////////////////////////////////////////////////////////////////////////////////////////    MOVEL*/
 
 @media only screen and (max-width: 480px){
     .grid-container {
@@ -387,7 +295,7 @@ video {
 
     .a1 {
         height: 60%;
-        background-image: url(./img/fundoC.png);
+        background-image: url(../img/fundoC.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -418,7 +326,6 @@ video {
         font-size: 4vw;
     }
 
-
     .bichos-grid {
         align-items: end;
         gap: 0px 5px;
@@ -428,8 +335,6 @@ video {
     .quadrado {
         height: auto;
     }
-
-
 
     .a2 {
         height: 40%;
@@ -444,7 +349,6 @@ video {
         align-items: center;
         flex-direction: column-reverse;
     }
-
 
     .nome-personagem {
         border: 2.5px solid#ffffff;
@@ -471,7 +375,6 @@ video {
         top: -50px;
     }
 
-
     .i-grid{
         width: 100%;
         height: 100%;
@@ -483,25 +386,11 @@ video {
     }
 
 
-    .tx p{
-        padding: 0px;
-        font-size: 4vw;
-    }
-
-    .teaser {
-
-        margin-bottom: 10px;
-        color: white;
-        border-left: 5px solid #ffcf47;
-        padding-left: 15px;
-        font-size: 1.5rem;
-        text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
-    }
 
 
-    .tx h2 {
-        font-size: 1.5rem;
-    }
+
+
+
 
 
     @media only screen and (max-height: 800px){
