--- a/css/home.css
+++ b/css/home.css
@@ -9,6 +9,14 @@ p{
     margin-bottom: 0 !important;
 }
 
+a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none !important;
+    background-color: transparent !important;
+}
+
 
 .grid-container {
     position: relative;
@@ -268,16 +276,10 @@ p{
 
 
 
-
-
-/* footer */
 .info {
-    background-image: radial-gradient(farthest-corner at 2000px 450px , #2535c0 0%, #333 100%);
-    height: 40vh;
-    border-top: 10px solid rgb(255, 255, 255); 
-    border-radius: 50px 50px 0px 0px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
+    background-image: url(../img/fundoC.png);
 }
+
 
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////    MOVEL*/
