--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,9 @@
     margin-top: 1px;
     background-color: #ffcf47;
     padding-top: 10px;
+    padding-bottom: 10vh;
     border-top: #8a704b solid 5px;
+    border-bottom: #8a704b solid 5px;
 }
 .principal {
     width: 85vw;
@@ -36,13 +38,13 @@
     border-left: 5px solid #ffcf47;
     padding-left: 15px;
     font-size: 2rem;
-    text-shadow: 4px 4px 4px rgba(51, 51, 51, 0.5);
+    text-shadow: 1px 1px 2px rgb(0, 0, 0) ;
 }
 .tx p {
     text-align: justify;
     color: rgb(255, 255, 255);
     font-size: 1.5vmax;
-    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.507);
+    text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
 .b2 {     
