--- a/css/navmenu.css
+++ b/css/navmenu.css
@@ -38,12 +38,26 @@
 
 
 .text-war {
-    color: #f8f9fa!important;
+
     margin-left: 10px;
     margin-right: 10px;
+  
+}
 
-
-    
+.spinner {
+    color: #f8f9fa!important;
+    display: inline-block;
+    width: 1.5rem; 
+    height: 1.5rem;
+    background-color: currentColor;
+    border-radius: 50%;
+    opacity: 1;
+    margin: 1px;
+    margin-left: 1vh;
+    /*
+    -webkit-animation: spinner-grow .75s linear infinite;
+    animation: spinner-grow .75s linear infinite;
+    */
 }
 
 .svgGiga {
@@ -86,3 +100,46 @@
 
 
 
+
+
+
+
+
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////    MOVEL*/
+
+@media only screen and (max-width: 480px){
+    body{
+        margin-top: 50px !important;
+    }
+
+    .menu-flutuante {
+        padding: 0px;
+        position: fixed;
+        margin-bottom: 0px;
+        left: 0%;
+        right: 0%;
+        bottom: auto;
+        top: 0%;
+
+        border-radius: 0px;
+        border: 0px solid #ffffff;
+        border-bottom: 1px solid #ffffff;
+        box-shadow: 0px 0px 10px rgb(0, 0, 0);
+        background-repeat: no-repeat;
+        background-size: cover;
+        z-index: 400;
+    }
+
+
+
+    .spinner {
+        display: none;
+    }
+
+    .grid-flutuante {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
